metrics/network-policy-monitoring-allow-ingress-from-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-allow-ingress-from-monitoring
  namespace: monitoring
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: NotIn
        values:
          - prometheus-server
          - thanos-querier
          - thanos-store-gateway
          - thanos-compactor
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
